src/app/common/components/BrowserRoot/ReadScreen.scss
/*
	componentPath: src/app/common/components/BrowserRoot/ReadScreen
	cssComponentId: read-screen_ikr26q
*/

.read-screen_ikr26q {
	display: flex;
	height: 100%;
	flex-flow: column;
	justify-content: center;
	align-items: center;
	font-size: 16px;
}
.read-screen_ikr26q > .content {
	flex: 0 0 auto;
	padding: 10px;
	text-align: center;
}
.read-screen_ikr26q > .content > .logo {
	margin-bottom: 40px;
}
.read-screen_ikr26q > .content > .logo > a {
	display: block;
}
.read-screen_ikr26q > .content > .logo > a > svg {
	fill: #666;
	height: 26px;
	display: block;
	margin: 0 auto;
}
.read-screen_ikr26q > .content > .article {
	margin-bottom: 40px;
}
.read-screen_ikr26q > .content > .article > strong {
	display: block;
	margin-top: 10px;
	font-size: 18px;
}
.read-screen_ikr26q > .content > a {
	text-decoration: underline;
	cursor: pointer;
}
.read-screen_ikr26q > .content > .download {
	display: block;
}
.read-screen_ikr26q > .content > .download > img {
	display: block;
	margin: 20px auto 0 auto;
}
.read-screen_ikr26q > .content > .download.chrome > img {
	width: 250px;
}
.read-screen_ikr26q > .content > .download.ios > img {
	width: 175px;
}
.read-screen_ikr26q > .content > .authenticate > .buttons {
	margin: 20px auto 0 auto;
}
.read-screen_ikr26q > .content > .authenticate > .buttons > button {
	height: 40px;
	border: none;
	outline: none;
	padding: 0 20px;
	background-color: transparent;
	cursor: pointer;
	font-size: 18px;
}
.read-screen_ikr26q > .content > .authenticate > .buttons > button:not(.loud):hover {
	background-color: #eaeaea;
}
.read-screen_ikr26q > .content > .authenticate > .buttons > button:not(:last-child) {
	margin-right: 20px;
}
.read-screen_ikr26q > .content > .authenticate > .buttons > .loud {
	background-color: black;
	color: white;
}
.read-screen_ikr26q > .content > .unsupported > .badges {
	display: flex;
	margin: 20px auto;
	justify-content: center;
	flex-wrap: wrap;
}
.read-screen_ikr26q > .content > .unsupported > .badges > a {
	margin: 0 10px 10px 10px;
}
.read-screen_ikr26q > .content > .unsupported > .badges > a > img {
	display: block;
	height: 55px;
}
.read-screen_ikr26q > .content > .unsupported > a {
	color: #666;
	font-size: 13px;
}

